hphp/test/zend/bad/ext/session/tests/bug66827.php
<?php
$_COOKIE[session_name()] = array();
session_start();
echo 'OK';
